// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxFlexGroup renders 0 1`] = `
Array [
  .c0 {
  box-flex-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders function 1`] = `
Array [
  .c0 {
  box-flex-group: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders invalid theme path 1`] = `
Array [
  .c0 {
  box-flex-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders negative number 1`] = `
Array [
  .c0 {
  box-flex-group: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-flex-group: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex-group: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-flex-group: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex-group: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex-group: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-flex-group: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-flex-group: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    box-flex-group: July;
  }
}

@media April {
  .c0 {
    box-flex-group: August;
  }
}

@media January {
  .c0 {
    box-flex-group: September;
  }
}

@media April {
  .c0 {
    box-flex-group: November;
  }
}

@media June {
  .c0 {
    box-flex-group: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-flex-group: July;
  }
}

@media April {
  .c0 {
    box-flex-group: August;
  }
}

@media January {
  .c0 {
    box-flex-group: September;
  }
}

@media April {
  .c0 {
    box-flex-group: November;
  }
}

@media June {
  .c0 {
    box-flex-group: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex-group: January;
  }
}

@media April {
  .c0 {
    box-flex-group: December;
  }
}

@media January {
  .c0 {
    box-flex-group: April;
  }
}

@media April {
  .c0 {
    box-flex-group: May;
  }
}

@media June {
  .c0 {
    box-flex-group: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-flex-group: January;
  }
}

@media April {
  .c0 {
    box-flex-group: December;
  }
}

@media January {
  .c0 {
    box-flex-group: April;
  }
}

@media April {
  .c0 {
    box-flex-group: May;
  }
}

@media June {
  .c0 {
    box-flex-group: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders postitive number 1`] = `
Array [
  .c0 {
  box-flex-group: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders string 1`] = `
Array [
  .c0 {
  box-flex-group: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxFlexGroup renders valid theme path 1`] = `
Array [
  .c0 {
  box-flex-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-flex-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
